# cerisemu

./: Cargo.toml  README.md
asm/: add.asm  hello_world.asm  kernel.asm  lorem.asm  malloc.asm  memcpy.asm
config/: os.ron
src/: compiler.rs  emulator.rs  lib.rs  main.rs  util.rs
src/compiler/: ast.rs  expressions.rs  generator.rs  parser.rs  processor.rs  tokens.rs
src/emulator/: exec.rs  instruction.rs  machine.rs  machine_config.rs  memory.rs  permission.rs  program.rs  signed.rs
tests/: tests.rs
tests/compiler/: expression.rs  expression_eval.rs
tests/emulator/: instructions.rs  malloc.rs  memcpy.rs  permission.rs
tests/emulator/instructions/: geta.rs  jmp.rs  lea.rs  load.rs  lt.rs  mov.rs  restrict.rs  store.rs  subseg.rs
