[package]
edition = "2021"
name    = "cerisemu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.1"
bincode = "1.3.3"
clap    = { version = "4.5.4", features = ["cargo"] }
logos   = "0.14.0"
rand    = "0.8.5"
ron     = "0.8.1"
rsa     = { version = "0.9.6", features = ["sha2", "serde"] }
serde   = { version = "1.0.200", features = ["serde_derive"] }
